SCRUM-12 회원가입 화면 구현 완료, .select에 블러처리 추가 필요

--- a/sw-security/public/css/join.module.css
+++ b/sw-security/public/css/join.module.css
@@ -2,15 +2,19 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background-color: #0d0d0d;
 }
 .header {
   flex: 1;
-  border-bottom: 1px solid grey;
+  /* border-bottom: 1px solid grey; */
+  /* background-color: red; */
 }
 .headerItems {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 15px 40px;
+  align-items: center;
 }
 .login {
   width: 100;
@@ -23,37 +27,122 @@
   justify-content: center;
   /* background-color: blue; */
   align-items: center;
+  /* position: relative; */
 }
 .inner {
-  width: 80%;
-  height: 50%;
+  width: 60%;
+  height: 100%;
+  /* background-color: green; */
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.textContainer {
+  display: flex;
+  flex-direction: column;
   /* background-color: red; */
+  width: 100%;
+  align-items: center;
+  position: relative; /* 다른 요소들이 다이아몬드 위에 위치하도록 함 */
+  z-index: 1;
+  margin-top: 40px;
+}
+.selectContainer {
   display: flex;
   flex-direction: row;
+  /* background-color: aqua; */
+  position: relative;
+  z-index: 2;
+  margin-top: 60px;
+  height: 310px;
   justify-content: space-around;
 }
 .select {
   display: flex;
   flex-direction: column;
-  /* background-color: blue; */
-  width: 30%;
+  background-color: #0d0d0d;
+  width: 32%;
   align-items: center;
+  border-radius: 12px;
+  height: 100%;
+  text-decoration: none;
+  opacity: 0.8;
+  position: relative;
+  overflow: hidden;
 }
 
-.imgContainer {
-  background-color: grey;
-  height: 70%;
-  width: 70%;
-  position: relative;
-  top: 40px;
-  overflow: hidden;
-  transition: transform 0.2s ease; /* 부드럽게 크기가 커지도록 */
+.select::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  padding: 0.3px;
+  border-radius: 12px;
+  background: linear-gradient(to bottom right, #a837bb, #0d0d0d);
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: xor;
+  mask-composite: exclude;
 }
-.imgContainer:hover {
-  transform: scale(1.1);
+
+.text1Container {
+  background-color: #0d0d0d;
+  border-radius: 99px;
+  width: 90px;
+  height: 35px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 0px 15px 1px #cb62ff;
 }
-.img {
-  height: 100%;
-  width: 100%;
-  transition: transform 0.3s ease;
+.text1 {
+  color: #cb62ff;
+  font-size: 14px;
+  /* margin: 10px 10px; */
+  font-weight: 600;
+}
+.text2Container {
+  /* background-color: green; */
+  margin-top: 10px;
+}
+.text2 {
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 40px;
+}
+.text3Container {
+  margin-top: 20px;
+}
+
+.text3 {
+  color: #969696;
+  font-size: 18px;
+  font-weight: 500;
+}
+.diamond {
+  position: absolute;
+  width: 370px;
+  height: 550px;
+  background: linear-gradient(to right, transparent, #e862ff);
+  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%); /* 기본 마름모 */
+  transform: scaleX(2) scaleY(0.5); /* 가로로 길게, 세로로 짧게 */
+  top: 50%; /* 화면 세로 중앙에 배치 */
+  left: 50%; /* 화면 가로 중앙에 배치 */
+  transform: translate(-50%, -50%) scaleX(2) scaleY(0.5); /* 중앙 정렬 */
+  opacity: 0.4; /* 전체 다이아몬드의 투명도를 30%로 설정 */
+  z-index: 0;
+}
+.diamond:nth-child(2) {
+  width: 260px;
+  height: 400px;
+  top: 37%;
+}
+.diamond:nth-child(3) {
+  width: 470px;
+  height: 700px;
+  top: 62%;
+}
+.tag {
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 25px;
 }
