SCRUM-21 회원가입 폼 구현 완료

--- a/sw-security/public/css/auth.module.css
+++ b/sw-security/public/css/auth.module.css
@@ -1,21 +1,11 @@
-.container {
+.inner {
+  width: 60%;
+  /* min-height: 100dvh; */
+  /* background-color: green; */
   display: flex;
   flex-direction: column;
-  height: 100vh;
-}
-.header {
-  flex: 1;
-  border-bottom: 1px solid grey;
-}
-/* .logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-} */
-.content {
-  display: flex;
-  flex: 15;
-  justify-content: center;
-  /* background-color: blue; */
+  position: relative;
   align-items: center;
+  height: 100%;
+  justify-content: center;
 }
