SCRUM-22 로그인 구현 완료, 서버랑 통신 테스트 필요

--- a/sw-security/public/css/auth.module.css
+++ b/sw-security/public/css/auth.module.css
@@ -9,3 +9,21 @@
   height: 100%;
   justify-content: center;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  /* height: 100vh; */
+  background-color: #0d0d0d;
+  height: 100vh;
+}
+
+.content {
+  display: flex;
+  flex: 15;
+  justify-content: center;
+  /* background-color: blue; */
+  /* align-items: center; */
+  position: relative;
+  /* overflow: hidden; */
+  height: 100%;
+}
