--- a/sw-security/public/css/default.module.css
+++ b/sw-security/public/css/default.module.css
@@ -15,7 +15,7 @@
   /* align-items: center; */
   position: relative;
   /* overflow: hidden; */
-  /* height: 100%; */
+  height: 100%;
 }
 .inner {
   width: 60%;
