--- a/sw-security/public/css/default.module.css
+++ b/sw-security/public/css/default.module.css
@@ -1,3 +1,6 @@
+html {
+  font-size: 18px;
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -5,6 +8,7 @@
   background-color: #0d0d0d;
   /* min-height: 100dvh; */
   overflow: hidden;
+  position: relative;
 }
 
 .content {
