--- a/sw-security/public/css/defaultBtn.module.css
+++ b/sw-security/public/css/defaultBtn.module.css
@@ -4,21 +4,21 @@
   cursor: pointer;
   background-color: #cb62ff;
   color: #0d0d0d;
-  font-size: 16px;
-  border-radius: 12px;
+  font-size: 0.89rem;
+  border-radius: 0.67rem;
 }
 
 .small {
-  width: 90px;
-  height: 45px;
+  width: 5.3vw;
+  height: 5vh;
 }
 
 .medium {
   width: 120px;
-  height: 48px;
+  height: 5vh;
 }
 
 .large {
-  width: 546px;
-  height: 52px;
+  width: 30vw;
+  height: 5vh;
 }
