--- a/sw-security/public/css/join.module.css
+++ b/sw-security/public/css/join.module.css
@@ -4,9 +4,9 @@
   /* background-color: red; */
   width: 100%;
   align-items: center;
-  position: relative; /* 다른 요소들이 다이아몬드 위에 위치하도록 함 */
+  position: relative;
   z-index: 1;
-  margin-top: 100px;
+  margin-top: 11vh;
 }
 .selectContainer {
   display: flex;
@@ -29,7 +29,7 @@
     #cb62ff 85%,
     white 100%
   );
-  backdrop-filter: blur(100px);
+  backdrop-filter: blur(5.56rem);
   width: 31%;
   /* align-items: center; */
   border-radius: 8%;
@@ -38,13 +38,13 @@
   position: relative;
   overflow: hidden;
   z-index: 1;
-  transition: all 0.3s ease; /* 모든 상태 변화에 부드러운 애니메이션 추가 */
+  transition: all 0.3s ease;
 }
 .select::before {
   content: "";
   position: absolute;
   inset: 0;
-  padding: 2px;
+  padding: 0.11rem;
   border-radius: 8%;
   background: linear-gradient(
     to bottom,
@@ -60,10 +60,10 @@
   transition: all 0.3s ease;
 }
 .select:hover {
-  padding: 25px;
+  padding: 1.39rem;
   /* transform: scale(1.15); */
-  box-shadow: 0 0 10px rgba(203, 98, 255, 0.6);
-  border: 3px solid #cb62ff;
+  box-shadow: 0 0 0.56rem rgba(203, 98, 255, 0.6);
+  border: 0.17rem solid #cb62ff;
 }
 .select:hover::before {
   background: linear-gradient(
@@ -86,36 +86,36 @@
 }
 .text1Container {
   background-color: #0d0d0d;
-  border-radius: 99px;
-  width: 90px;
-  height: 35px;
+  border-radius: 4.4rem;
+  width: 5.5vw;
+  height: 3.9vh;
   justify-content: center;
   display: flex;
   align-items: center;
-  box-shadow: 0px 0px 15px 1px #cb62ff;
+  box-shadow: 0 0 0.83rem 0.06rem #cb62ff;
 }
 .text1 {
   color: #cb62ff;
-  font-size: 14px;
+  font-size: 0.78rem;
   /* margin: 10px 10px; */
   font-weight: 600;
 }
 .text2Container {
   /* background-color: green; */
-  margin-top: 10px;
+  margin-top: 2vh;
 }
 .text2 {
   color: #ffffff;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 2.2rem;
 }
 .text3Container {
-  margin-top: 20px;
+  margin-top: 2.1vh;
 }
 
 .text3 {
   color: #969696;
-  font-size: 18px;
+  font-size: 1rem;
   font-weight: 500;
 }
 /* .diamond {
@@ -144,13 +144,13 @@
 .tag {
   color: #ffffff;
   font-weight: 600;
-  font-size: 30px;
+  font-size: 1.67rem;
 }
 .addTag {
   color: #969696;
   font-weight: 500;
-  font-size: 15px;
-  margin-top: 10px;
+  font-size: 0.84rem;
+  margin-top: 1vh;
 }
 .circle {
   position: absolute;
@@ -174,8 +174,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column; /* 세로 정렬 */
-  width: 200px;
+  flex-direction: column;
+  width: 5vw;
   height: 8vh;
   z-index: 0;
 }
@@ -194,6 +194,6 @@
   /* background-color: red; */
   display: flex;
   flex-direction: column;
-  margin-top: 40px;
-  margin-left: 30px;
+  margin-top: 4.3vh;
+  margin-left: 1.8vw;
 }
