--- a/sw-security/public/css/login.module.css
+++ b/sw-security/public/css/login.module.css
@@ -3,8 +3,8 @@
   /* background-color: blue; */
   color: #ffffff;
   font-weight: 500;
-  font-size: 13px;
-  margin-bottom: 10px;
+  font-size: 0.73rem;
+  margin-bottom: 1.2vh;
 }
 .formContainer {
   /* background-color: red; */
@@ -15,14 +15,14 @@
   width: 30vw;
   /* position: relative;
   top: -4vh; */
-  margin-bottom: 100px;
+  margin-bottom: 11vh;
 }
 .loginForm {
   width: 100%;
   /* background-color: red; */
 }
 input {
-  border-radius: 12px;
+  border-radius: 0.67rem;
   height: 4.5vh;
   /* width: 100%; */
   box-sizing: border-box; /* padding과 border 포함해서 너비 계산 */
@@ -30,20 +30,20 @@ input {
   border: none;
   background-color: #2a2c2f;
   caret-color: #ffffff;
-  padding-left: 15px;
+  padding-left: 0.8vw;
   color: #ffffff;
 }
 
 input::placeholder {
-  font-size: 14px;
+  font-size: 0.78rem;
   color: #969696;
   font-weight: 400;
 }
 .titleContainer {
-  margin: 20px 0;
+  margin: 1.5vh 0;
 }
 .title {
-  font-size: 30px;
+  font-size: 1.67rem;
   color: #ffffff;
   font-weight: 600;
 }
@@ -54,13 +54,13 @@ input::placeholder {
 }
 .loginBtn {
   background-color: #cb62ff;
-  font-size: 16px;
+  font-size: 0.89rem;
   color: #0d0d0d;
   border: none;
-  border-radius: 12px;
+  border-radius: 0.67rem;
   width: 100%;
   height: 5vh;
-  margin-top: 30px;
+  margin-top: 3vh;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.2s ease;
@@ -77,16 +77,16 @@ input::placeholder {
 .passwordDiv {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin-bottom: 2vh;
 }
 .findId {
   color: #969696;
   font-weight: 500;
-  font-size: 13px;
+  font-size: 0.73rem;
 }
 .findIdDiv {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 2.3vh;
 }
