SCRUM-23 화면 비율에 따라 일정 비율 유지 리팩토링

--- a/sw-security/public/css/default.module.css
+++ b/sw-security/public/css/default.module.css
@@ -22,7 +22,8 @@ html {
   height: 100%;
 }
 .inner {
-  width: 60%;
+  /* width: 60%; */
+  width: 63.89rem;
   /* min-height: 100dvh; */
   /* background-color: green; */
   display: flex;
