--- a/sw-security/public/css/login.module.css
+++ b/sw-security/public/css/login.module.css
@@ -4,7 +4,8 @@
   color: #ffffff;
   font-weight: 500;
   font-size: 0.73rem;
-  margin-bottom: 1.2vh;
+  /* margin-bottom: 1.2vh; */
+  margin-bottom: 1.2vkh;
 }
 .formContainer {
   /* background-color: red; */
@@ -12,10 +13,12 @@
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
-  width: 30vw;
+  /* width: 30vw; */
+  width: 32.2rem;
   /* position: relative;
   top: -4vh; */
-  margin-bottom: 11vh;
+  /* margin-bottom: 11vh; */
+  margin-bottom: 5.56rem;
 }
 .loginForm {
   width: 100%;
@@ -23,14 +26,16 @@
 }
 input {
   border-radius: 0.67rem;
-  height: 4.5vh;
+  /* height: 4.5vh; */
+  height: 2.33rem;
   /* width: 100%; */
-  box-sizing: border-box; /* padding과 border 포함해서 너비 계산 */
-  flex-grow: 1; /* 남은 공간을 모두 차지 */
+  box-sizing: border-box;
+  flex-grow: 1;
   border: none;
   background-color: #2a2c2f;
   caret-color: #ffffff;
-  padding-left: 0.8vw;
+  /* padding-left: 0.8vw; */
+  padding-left: 0.89rem;
   color: #ffffff;
 }
 
@@ -40,7 +45,8 @@ input::placeholder {
   font-weight: 400;
 }
 .titleContainer {
-  margin: 1.5vh 0;
+  /* margin: 1.5vh 0; */
+  margin: 0.8rem 0;
 }
 .title {
   font-size: 1.67rem;
@@ -58,9 +64,11 @@ input::placeholder {
   color: #0d0d0d;
   border: none;
   border-radius: 0.67rem;
-  width: 100%;
-  height: 5vh;
-  margin-top: 3vh;
+  width: 32.2rem;
+  /* height: 5vh; */
+  height: 2.5rem;
+  /* margin-top: 3vh; */
+  margin-top: 1.67rem;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.2s ease;
@@ -77,7 +85,8 @@ input::placeholder {
 .passwordDiv {
   display: flex;
   flex-direction: column;
-  margin-bottom: 2vh;
+  /* margin-bottom: 2vh; */
+  margin-bottom: 1rem;
 }
 .findId {
   color: #969696;
@@ -88,5 +97,6 @@ input::placeholder {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 2.3vh;
+  /* margin-top: 2.3vh; */
+  margin-top: 1.28rem;
 }
