--- a/sw-security/public/css/loginHeader.module.css
+++ b/sw-security/public/css/loginHeader.module.css
@@ -8,7 +8,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1.7vh 2.3vw;
+  /* padding: 1.7vh 2.3vw; */
+  padding: 1.1rem 2.78rem;
   align-items: center;
 }
 /* .login {
