--- a/sw-security/public/css/logo.module.css
+++ b/sw-security/public/css/logo.module.css
@@ -5,17 +5,21 @@
   align-items: center;
 }
 .img {
-  width: 2.8vw;
-  height: 2.8vw;
+  /* width: 2.6vw;
+  height: 2.6vw; */
+  width: 2.8rem;
+  height: 2.8rem;
   /* object-fit: cover; */
-  border-radius: 0.67rem;
+  /* border-radius: 0.67rem; */
+  border-radius: 23%;
   background-color: white;
 }
 
 .text {
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-weight: bold;
   color: #cb62ff;
-  margin-left: 0.7vw;
+  /* margin-left: 0.7vw; */
+  margin-left: 0.83rem;
   text-align: center;
 }
