--- a/sw-security/public/css/signup.module.css
+++ b/sw-security/public/css/signup.module.css
@@ -4,7 +4,8 @@ label {
   color: #ffffff;
   font-weight: 500;
   font-size: 0.73rem;
-  margin-bottom: 1.2vh;
+  /* margin-bottom: 1.2vh; */
+  margin-bottom: 0.56rem;
 }
 
 .formContainer {
@@ -13,7 +14,8 @@ label {
   flex-direction: column;
   /* justify-content: center; */
   align-items: center;
-  width: 30vw;
+  /* width: 30vw; */
+  width: 32.2rem;
   /* position: relative;
   top: -4vh; */
 }
@@ -22,26 +24,30 @@ label {
 }
 input {
   border-radius: 0.67rem;
-  height: 4.5vh;
+  /* height: 4.5vh; */
+  height: 2.33rem;
   /* width: 100%; */
   box-sizing: border-box;
   flex-grow: 1;
   border: none;
   background-color: #2a2c2f;
   caret-color: #ffffff;
-  padding-left: 0.8vw;
+  /* padding-left: 0.8vw; */
+  padding-left: 0.89rem;
   color: #ffffff;
 }
 
 select {
   border-radius: 0.67rem;
-  height: 4.5vh;
+  /* height: 4.5vh; */
+  height: 2.33rem;
   box-sizing: border-box;
   flex-grow: 1;
   border: none;
   background-color: #2a2c2f;
   caret-color: #ffffff;
-  padding-left: 0.7vw;
+  /* padding-left: 0.7vw; */
+  padding-left: 0.89rem;
   font-size: 0.78rem;
   color: #969696;
   font-weight: 400;
@@ -63,7 +69,8 @@ input::placeholder {
   font-weight: 400;
 } */
 .titleContainer {
-  margin: 1.5vh 0;
+  /* margin: 1.5vh 0; */
+  margin: 0.8rem 0;
 }
 .title {
   font-size: 1.67rem;
@@ -82,12 +89,14 @@ input::placeholder {
 .companyCodeDiv {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1.3vh;
+  /* margin-bottom: 1.3vh; */
+  margin-bottom: 0.7rem;
 }
 
 .btn {
   border-radius: 0.67rem;
-  padding: 1vh 1vw;
+  /* padding: 1vh 1vw; */
+  padding: 0.56rem 1rem;
   margin-left: 0.5vw;
   white-space: nowrap;
   background-color: #5e6269;
@@ -123,9 +132,11 @@ input::placeholder {
   color: #0d0d0d;
   border: none;
   border-radius: 0.67rem;
-  width: 100%;
-  height: 5vh;
-  margin-top: 3vh;
+  width: 32.2rem;
+  /* height: 5vh; */
+  height: 2.5rem;
+  /* margin-top: 3vh; */
+  margin-top: 1.67rem;
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.2s ease;
