SCRUM-23 메인 화면 및 프로필 화면 구현 완료

--- a/sw-security/public/css/login.module.css
+++ b/sw-security/public/css/login.module.css
@@ -4,8 +4,7 @@
   color: #ffffff;
   font-weight: 500;
   font-size: 0.73rem;
-  /* margin-bottom: 1.2vh; */
-  margin-bottom: 1.2vkh;
+  margin-bottom: 0.56rem;
 }
 .formContainer {
   /* background-color: red; */
