build후 페이지 이동 시 레이아웃 변경되는 문제 리팩토링

--- a/sw-security/app/css/logo.module.css
+++ b/sw-security/app/css/logo.module.css
@@ -12,7 +12,7 @@
   /* object-fit: cover; */
   /* border-radius: 0.67rem; */
   border-radius: 23%;
-  background-color: white;
+  /* background-color: white; */
 }
 
 .text {
