--- a/sw-security/app/css/loginHeader.module.css
+++ b/sw-security/app/css/loginHeader.module.css
@@ -15,3 +15,9 @@
 /* .login {
   background-color: green;
 } */
+.none {
+  /* display: none; */
+  width: 2.8rem;
+  height: 2.8rem;
+  background-color: red;
+}
