build 후 브라우저에서 자동 스타일 적용되어 .select:hover 시 파란 선 생기는 부분 리팩토링 => all:unset 사용

--- a/sw-security/app/css/index.module.css
+++ b/sw-security/app/css/index.module.css
@@ -40,7 +40,7 @@
 }
 .startPoint {
   position: relative;
-  /* background-color: red; */
+  /* background-color: blue; */
   display: flex;
   align-items: center;
   justify-content: center;
