--- a/sw-security/app/css/join.module.css
+++ b/sw-security/app/css/join.module.css
@@ -22,6 +22,7 @@
   justify-content: space-between;
 }
 .select {
+  all: unset;
   display: flex;
   flex-direction: column;
   /* background-color: #0d0d0d; */
@@ -41,7 +42,15 @@
   overflow: hidden;
   z-index: 1;
   transition: all 0.3s ease;
+  outline: none;
+  border: none;
 }
+.select:hover,
+.select:focus,
+.select:focus-visible {
+  outline: none !important;
+}
+
 .select::before {
   content: "";
   position: absolute;
@@ -59,13 +68,7 @@
   mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
   -webkit-mask-composite: xor;
   mask-composite: exclude;
-  transition: all 0.3s ease;
-}
-.select:hover {
-  padding: 1.39rem;
-  /* transform: scale(1.15); */
-  box-shadow: 0 0 0.56rem rgba(203, 98, 255, 0.6);
-  border: 0.17rem solid #cb62ff;
+  transition: all 0.2s ease;
 }
 .select:hover::before {
   background: linear-gradient(
@@ -74,6 +77,13 @@
     rgba(203, 98, 255, 0) 100%
   );
 }
+.select:hover {
+  padding: 1.39rem;
+  /* transform: scale(1.15); */
+  box-shadow: 0 0 0.56rem rgba(203, 98, 255, 0.6);
+  border: 0.17rem solid #cb62ff;
+}
+
 .select img {
   transition: transform 0.3s ease;
 }
