--- a/sw-security/app/css/auth.module.css
+++ b/sw-security/app/css/auth.module.css
@@ -25,6 +25,6 @@
   /* align-items: center; */
   position: relative;
   /* overflow: hidden; */
-  height: 100%;
+  /* height: 100%; */
   background-color: #0d0d0d;
 }
