회원가입 백엔드랑 연동 완료

--- a/sw-security/app/css/signup.module.css
+++ b/sw-security/app/css/signup.module.css
@@ -119,6 +119,8 @@ input::placeholder {
 }
 
 .emailDiv div,
+.emailAuthDiv div,
+.phoneNumberDiv div,
 .emailAuthDiv div {
   display: flex;
   flex-direction: row;
