SCRUM-36 직원 리스트 페이지 구현 완료

--- a/sw-security/app/css/default.module.css
+++ b/sw-security/app/css/default.module.css
@@ -20,8 +20,8 @@
   height: 100%;
 }
 .inner {
-  /* width: 60%; */
-  width: 63.89rem;
+  width: 60%;
+  /* width: 63.89rem; */
   /* min-height: 100dvh; */
   /* background-color: green; */
   display: flex;
