--- a/sw-security/app/css/index.module.css
+++ b/sw-security/app/css/index.module.css
@@ -110,7 +110,8 @@
 .intro {
   color: #ffffff;
   font-weight: 500;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  line-height: 1.6rem;
 }
 .startBtnContainer {
   /* width: 7.3vw; */
